Run patch